force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeReason__c</fullName>
    <label>Change Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>