force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__EmployerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployerId__c</fullName>
    <label>Employer</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>