force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__EmployerPhone__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmployerPhone__c</fullName>
    <label>Employer Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmployerPhone</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>