force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__IncomeLossPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncomeLossPercent__c</fullName>
    <label>Income Loss Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncomeLossPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>