force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__IncomeStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncomeStatus__c</fullName>
    <label>Income Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncomeStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>