force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__NetIncome__c.field-meta.xml
<CustomField>
    <fullName>ssot__NetIncome__c</fullName>
    <label>Net Income</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NetIncome</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>