force-app/main/default/objects/ssot__PartyIncome__dlm/fields/ssot__PartyIncome_PartyId_map_Party_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyIncome_PartyId_map_Party_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyIncome_PartyId_map_Party_Id_N_1</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyIncome_PartyId_map_Party_Id_N_1</relationshipLabel>
    <relationshipName>PartyIncome_PartyId_map_Party_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>